# ann_search

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  app.py  config.py  project.md  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_v1_2_sweep_tables.py  0003_v1_2_dataset_vector_format.py  0004_v1_2_aligned_datasets.py  0005_v1_2_rag_sessions.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: aligned_datasets.py  auth.py  datasets.py  evaluation.py  indexes.py  rag.py  router.py  search.py  stats.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  aligned_dataset.py  dataset.py  index_record.py  rag.py  search_log.py  sweep.py  user.py
backend/app/schemas/: __init__.py  aligned.py  common.py  dataset.py  evaluation.py  index.py  rag.py  search.py  stats.py  subgraph.py  sweep.py  user.py
backend/app/services/: __init__.py  alignment.py  dataset_service.py  evaluation.py  preprocess.py  rag.py  rag_tools.py  search.py  search_cache.py  stats.py  user_service.py
backend/app/services/ann/: __init__.py  adaptive_hnsw_backend.py  base.py  brute_backend.py  cache.py  factory.py  faiss_backend.py  hnswlib_backend.py  sparse_backend.py
backend/app/tasks/: __init__.py  benchmark_task.py  index_task.py  preprocess_task.py  worker.py
backend/scripts/: alignment_offline.py  alignment_plot.py  benchmark.py  sweep_offline.py  sweep_plot.py
backend/tests/: conftest.py  test_alignment.py  test_ann_backends.py  test_auth.py  test_datasets.py  test_evaluation.py  test_health.py  test_indexes_cache_stats.py  test_rag.py  test_search.py  test_search_cache.py  test_stats.py  test_subgraph.py
docs/: 00_数据说明.md  00_课程需求.md  01_项目概述.md  02_需求分析与系统设计.md  03_系统测试.md  04_项目管理.md  05_用户手册.md  06_API接口文档.md  _loop_status.md  alignment_offline_3way.json  benchmark_report.md  benchmark_results.json  benchmark_results_dim.json  progress_summary.md  v1.2_progress.json
e2e/: capture_screenshots.py  (+8 more)
(+89 files in other folders)
