[project]
name = "ann-search-backend"
version = "0.1.0"
description = "单细胞 ANN 检索系统后端"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ann-search team" }]

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "arq>=0.26",
    "redis>=5.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "anndata>=0.10",
    "scanpy>=1.10",
    "hnswlib>=0.8",
    "faiss-cpu>=1.8",
    "anthropic>=0.40",
    "httpx>=0.27",
    "sse-starlette>=2",
    "brotli-asgi>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "aiosqlite>=0.20",
    "asgi-lifespan>=2.1",
]
video = [
    "edge-tts>=7.2",
    "imageio-ffmpeg>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 标准用法：在参数默认值里调用 File / Form / Body / Depends 等。
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
